# xWeather

./: .gitignore  CMakeLists.txt  README.md
data/: app.rc  info  org.xzg.xweather.desktop  xweather.desktop
manual/: 简单天气用户手册.docx
src/: CMakeLists.txt  main.cpp
src/common/: AppConfig.cpp  AppConfig.h  CommonHelper.cpp  CommonHelper.h  DarkStyle.cpp  DarkStyle.h  FavCityWidget.cpp  FavCityWidget.h  Global.h  HttpClient.cpp  HttpClient.h  SearchComBoxWidget.cpp  SearchComBoxWidget.h  SignalManager.cpp  SignalManager.h  WeatherHttpJob.cpp  WeatherHttpJob.h  version.h  version.h.in
src/dialogs/: AboutDialog.cpp  AboutDialog.h  AqiToolTip.cpp  AqiToolTip.h  CityManagerDialog.cpp  CityManagerDialog.h  ConfigDialog.cpp  ConfigDialog.h  FramelessWidget.cpp  FramelessWidget.h  MainDialog.cpp  MainDialog.h  TitleWidget.cpp  TitleWidget.h  WarningToolTip.cpp  WarningToolTip.h  WeatherWidget.cpp  WeatherWidget.h
src/forecast_view/: FutureCityWeatherListView.cpp  FutureCityWeatherListView.h  FutureWeatherItemDelegate.cpp  FutureWeatherItemDelegate.h  LifeIndexItemDelegate.cpp  LifeIndexItemDelegate.h  LifeIndexListView.cpp  LifeIndexListView.h  TodayCityWeatherFrame.cpp  TodayCityWeatherFrame.h
src/resource/: res.qrc
src/resource/dark_style/: darkstyle.qss
